Внёс поправки после  cross review